--- a/pricing.html
+++ b/pricing.html
@@ -41,10 +41,12 @@
             </div>
             <div class="col-lg-6 col-md-4  d-none d-lg-block">
                <div class="menu-wep">
-                 <!--  <a href="http://marketplace.minical.io/"  target="_blank" class="headA" >Marketplace</a>  -->
-                 <a href="contact.html" class="headA">Become a partner</a>
-                 <a href="pricing.html" class="headA">Pricing</a>
-                 <a href="http://marketplace.minical.io/" target="_blank" class="headA">Marketplace</a>
+                  <!--  <a href="http://marketplace.minical.io/"  target="_blank" class="headA" >Marketplace</a>  -->
+                  <a href="https://roomsy.typeform.com/to/Hpx22sy5" class="headA">Become a partner</a>
+                  <a href="pricing.html" class="headA">Pricing</a>
+                  <a href="http://marketplace.minical.io/" class="headA">Marketplace (beta)</a>
+                  <a href="https://discord.gg/a7B7RXZ3w5" class="headA" target="_window">Chat with us</a>
+                  <!-- <a href="https://minical.kampsite.co/" class="headA">Feature Requests</a> -->
                </div>
             </div>
             <div class="col-lg-4  col-md-4  d-none d-lg-block text-right btn-2">
@@ -68,38 +70,28 @@
       </div>
       <div class="pricingg">
          <div class="plan">
-            <h2>Hosted by you</h2>
-            <div class="price">Free</div>
+            <h2>Personal</h2>
+            <div class="price"><a href="https://github.com/minical/minical"><button style="background-color: #c3d8ff;">Download Free Open-Source</button></a></div>
             <ul class="features">
-               <!-- <li><i class="fas fa-check-circle"></i> Unlimited Websites</li>
-               <li><i class="fas fa-check-circle"></i> 1 User</li>
-               <li><i class="fas fa-check-circle"></i> 100MB Space/website</li>
-               <li><i class="fas fa-check-circle"></i> Continuous deployment</li>
-               <li><i class="fas fa-times-circle"></i> No priority support</li> -->
+               <li><i class="fas fa-check-circle"></i> Unlimited Websites</li>
+               <li><i class="fas fa-check-circle"></i> Continuous updates</li>
+               <li><i class="fas fa-times-circle"></i> Support not included</li>
             </ul>
-            <a href="https://github.com/minical/minical"><button>Source code available on Github</button></a>
+            
          </div>
          <div class="plan popular">
-            <h2>Hosted</h2>
-            <div class="price">$0.20 USD per booking creation</div>
+            <h2>Partner</h2>
+            <div class="price"><a href="https://roomsy.typeform.com/to/Hpx22sy5" target="_blank"><button style="background-color: #c3d8ff;">Contact us</button></a></div>
+            
             <ul class="features">
+               <li><i class="fas fa-check-circle"></i> Everything from "Hosted by you"</li>
+               <li><i class="fas fa-check-circle"></i> Hosting on our servers or on your own</li>
                <li><i class="fas fa-check-circle"></i> API Access</li>
-               <li><i class="fas fa-check-circle"></i> Continuous updates</li>
-               <li><i class="fas fa-check-circle"></i> Email Support</li>
-               <li><i class="fas fa-check-circle"></i> Resellers & whitelabel partners welcome </li>               
-               <li><i class="fas fa-check-circle"></i> Can support around 5 vacation rental properties at $20/mo cost </li>               
-            </ul>
-            <a href="http://app.minical.io/auth/login" target="_blank"><button>Sign-up</button></a>
-         </div>
-         <div class="plan">
-            <h2>Support plan (Hosted addon)</h2>
-            <div class="price">$1500 USD per month. Billed annually </div>
-            <ul class="features">
-               <li><i class="fas fa-check-circle"></i> 99.99 SLA</li>
+               <li><i class="fas fa-check-circle"></i> 99.99 SLA (if hosted)</li>
+               <li><i class="fas fa-check-circle"></i> Commercial-license for PMS extensions*</li>
                <li><i class="fas fa-check-circle"></i> Onboarding & Training</li>
-               <li><i class="fas fa-check-circle"></i> Direct support from core engineers (5 hours/month)</li>
+               <li><i class="fas fa-check-circle"></i> Resellers & whitelabel partners welcome </li>
             </ul>
-            <a href="mailto:support@minical.io"><button>Contact us</button></a>
          </div>
       </div>
       <!--:::::footer area start:::::::-->
