--- a/header.html
+++ b/header.html
@@ -10,7 +10,7 @@
             </div>
         </div>
         <div class="col-lg-6 col-sm-8  d-none d-lg-block">
-            <a href="http://marketplace.minical.io/"  target="_blank" class="headA" >Marketplace</a> 
+            <a href="http://marketplace.minical.io/"  target="_blank" class="headA" >Marketplace (beta)</a> 
             <a href="contact.html" class="headA">Become a partner</a>
             <a href="https://discord.gg/a7B7RXZ3w5"  target="_blank" class="headA">Discord</a>      
         </div>
