updated link as google form

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="col-lg-6  col-md-4  d-none d-lg-block">
                <div class="menu-wep">
                   <!--  <a href="http://marketplace.minical.io/"  target="_blank" class="headA" >Marketplace</a>  -->
-                  <a href="https://roomsy.typeform.com/to/Hpx22sy5" class="headA">Become a partner</a>
+                  <a href="https://forms.gle/WCuFvC7vjXBR8EAB7" class="headA">Become a partner</a>
                   <a href="pricing.html" class="headA">Pricing</a>
                   <a href="http://marketplace.minical.io/" class="headA">Marketplace (beta)</a>
                   <a href="https://discord.gg/a7B7RXZ3w5" class="headA" target="_window">Chat with us</a>
@@ -78,8 +78,7 @@
                   <div class="banner-content">
                      <h1>Open-source Property Management System</h1>
                      <p>
-                        miniCal is an open-source project contributed by various PMS vendors to collectively improve and maintain one PMS platform.
-                        Everyone is welcome to resell, or make a business out of this project.
+                        Join the biggest community of open-source PMS developers. Save development costs and have access to 50+ extensions
                      </p>
                      <div class="bottom-btn">
                         <div class="btn-2">
@@ -101,7 +100,7 @@
                <div class="col-md-12">
                   <div class="learn_next">
                      <h1 class="text-center">This Minimal Calendar </h1>
-                     <p class="text-center">powers hundreds of businesses around the world</p>
+                     <p class="text-center">powers properties around the world</p>
                   </div>
                </div>
             </div>
