--- a/pricing.html
+++ b/pricing.html
@@ -42,7 +42,7 @@
             <div class="col-lg-6 col-md-4  d-none d-lg-block">
                <div class="menu-wep">
                   <!--  <a href="http://marketplace.minical.io/"  target="_blank" class="headA" >Marketplace</a>  -->
-                  <a href="https://roomsy.typeform.com/to/Hpx22sy5" class="headA">Become a partner</a>
+                  <a href="https://forms.gle/WCuFvC7vjXBR8EAB7" class="headA">Become a partner</a>
                   <a href="pricing.html" class="headA">Pricing</a>
                   <a href="http://marketplace.minical.io/" class="headA">Marketplace (beta)</a>
                   <a href="https://discord.gg/a7B7RXZ3w5" class="headA" target="_window">Chat with us</a>
@@ -81,7 +81,7 @@
          </div>
          <div class="plan popular">
             <h2>Partner</h2>
-            <div class="price"><a href="https://roomsy.typeform.com/to/Hpx22sy5" target="_blank"><button style="background-color: #c3d8ff;">Contact us</button></a></div>
+            <div class="price"><a href="https://forms.gle/WCuFvC7vjXBR8EAB7" target="_blank"><button style="background-color: #c3d8ff;">Contact us</button></a></div>
             
             <ul class="features">
                <li><i class="fas fa-check-circle"></i> Everything from "Hosted by you"</li>
