--- a/index.html
+++ b/index.html
@@ -52,12 +52,13 @@
                   </a>
                </div>
             </div>
-            <div class="col-lg-6  col-md-4  d-none d-lg-block">
+            <div class="col-lg-6 col-md-4  d-none d-lg-block">
                <div class="menu-wep">
                   <!--  <a href="http://marketplace.minical.io/"  target="_blank" class="headA" >Marketplace</a>  -->
                   <a href="https://forms.gle/WCuFvC7vjXBR8EAB7" class="headA">Become a partner</a>
                   <a href="pricing.html" class="headA">Pricing</a>
-                  <a href="http://marketplace.minical.io/" class="headA">Marketplace (beta)</a>
+                  <a href="http://marketplace.minical.io/" class="headA">Marketplace</a>
+                  <a href="https://docs.minical.io" class="headA" target="_window">Documentation</a>
                   <a href="https://discord.gg/a7B7RXZ3w5" class="headA" target="_window">Chat with us</a>
                   <!-- <a href="https://minical.kampsite.co/" class="headA">Feature Requests</a> -->
                </div>
