--- a/pricing.html
+++ b/pricing.html
@@ -44,7 +44,8 @@
                   <!--  <a href="http://marketplace.minical.io/"  target="_blank" class="headA" >Marketplace</a>  -->
                   <a href="https://forms.gle/WCuFvC7vjXBR8EAB7" class="headA">Become a partner</a>
                   <a href="pricing.html" class="headA">Pricing</a>
-                  <a href="http://marketplace.minical.io/" class="headA">Marketplace (beta)</a>
+                  <a href="http://marketplace.minical.io/" class="headA">Marketplace</a>
+                  <a href="https://docs.minical.io" class="headA" target="_window">Documentation</a>
                   <a href="https://discord.gg/a7B7RXZ3w5" class="headA" target="_window">Chat with us</a>
                   <!-- <a href="https://minical.kampsite.co/" class="headA">Feature Requests</a> -->
                </div>
@@ -71,27 +72,42 @@
       <div class="pricingg">
          <div class="plan">
             <h2>Personal</h2>
-            <div class="price"><a href="https://github.com/minical/minical"><button style="background-color: #c3d8ff;">Download Free Open-Source</button></a></div>
+            <div class="price">Free</div>
             <ul class="features">
-               <li><i class="fas fa-check-circle"></i> Unlimited Websites</li>
+               <li><i class="fas fa-check-circle"></i> Host your own server</li>
+               <li><i class="fas fa-check-circle"></i> Booking Calendar</li>
+               <li><i class="fas fa-check-circle"></i> Invoicing</li>
                <li><i class="fas fa-check-circle"></i> Continuous updates</li>
                <li><i class="fas fa-times-circle"></i> Support not included</li>
             </ul>
-            
+            <a href="https://github.com/minical/minical"><button style="background-color: #c3d8ff;">Get Source Code</button></a>
+         </div>
+         <div class="plan">
+            <h2>Minimal</h2>
+            <div class="price">Free</div>
+            <ul class="features">               
+               <li><i class="fas fa-check-circle"></i> Hosted by miniCal</li>
+               <li><i class="fas fa-check-circle"></i> Booking Calendar</li>
+               <li><i class="fas fa-check-circle"></i> Invoicing</li>
+               <li><i class="fas fa-check-circle"></i> Continuous updates</li>
+               <li><i class="fas fa-check-circle"></i> Limited access to extensions</li>
+               <li><i class="fas fa-check-circle"></i> Basic E-mail support</li>
+            </ul>
+            <a href="https://app.minical.io/auth/register"><button style="background-color: #c3d8ff;">Sign-up Online</button></a>            
          </div>
          <div class="plan popular">
             <h2>Partner</h2>
-            <div class="price"><a href="https://forms.gle/WCuFvC7vjXBR8EAB7" target="_blank"><button style="background-color: #c3d8ff;">Contact us</button></a></div>
+            <div class="price"></div>
             
             <ul class="features">
-               <li><i class="fas fa-check-circle"></i> Everything from "Hosted by you"</li>
-               <li><i class="fas fa-check-circle"></i> Hosting on our servers or on your own</li>
+               <li><i class="fas fa-check-circle"></i> Everything from "Minimal"</li>
                <li><i class="fas fa-check-circle"></i> API Access</li>
-               <li><i class="fas fa-check-circle"></i> 99.99 SLA (if hosted)</li>
-               <li><i class="fas fa-check-circle"></i> Commercial-license for PMS extensions*</li>
+               <li><i class="fas fa-check-circle"></i> 99.99 SLA</li>
+               <li><i class="fas fa-check-circle"></i> Reseller-license</li>
                <li><i class="fas fa-check-circle"></i> Onboarding & Training</li>
-               <li><i class="fas fa-check-circle"></i> Resellers & whitelabel partners welcome </li>
             </ul>
+
+            <a href="https://forms.gle/WCuFvC7vjXBR8EAB7" target="_blank"><button style="background-color: #c3d8ff;">Contact us</button></a>
          </div>
       </div>
       <!--:::::footer area start:::::::-->
