--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                   <!--  <a href="http://marketplace.minical.io/"  target="_blank" class="headA" >Marketplace</a>  -->
                   <a href="https://forms.gle/WCuFvC7vjXBR8EAB7" class="headA">Become a partner</a>
                   <a href="pricing.html" class="headA">Pricing</a>
+                  <a href="partners.html" class="headA">Partners</a>
                   <a href="http://marketplace.minical.io/" class="headA">Marketplace</a>
                   <a href="https://docs.minical.io" class="headA" target="_window">Documentation</a>
                   <a href="https://discord.gg/a7B7RXZ3w5" class="headA" target="_window">Chat with us</a>
