footer year updated

--- a/pricing.html
+++ b/pricing.html
@@ -132,7 +132,9 @@
                <i class="fab fa-discord center" style="font-size:30px"></i></a></li>
                     </ul> 
                   </div>
-                  <p class="fotter-wept">© Copyright 2018 - 2021 miniCal</p>
+                  <p class="fotter-wept">© Copyright
+                     <script>document.write(new Date().getFullYear());</script> miniCal
+                  </p>
                </div>
                </div>
             </div>
