--- a/index.html
+++ b/index.html
@@ -617,7 +617,9 @@
                            </li>
                         </ul>
                      </div>
-                     <p class="fotter-wept">© Copyright 2018 - 2021 miniCal</p>
+                     <p class="fotter-wept">© Copyright
+                        <script>document.write(new Date().getFullYear());</script> miniCal
+                     </p>
                   </div>
                </div>
             </div>
