--- a/partners.html
+++ b/partners.html
@@ -145,7 +145,9 @@
                                     </li>
                                 </ul> 
                             </div>
-                            <p class="fotter-wept">© Copyright 2018 - 2021 miniCal</p>
+                            <p class="fotter-wept">© Copyright
+                                <script>document.write(new Date().getFullYear());</script> miniCal
+                            </p>
                         </div>
                     </div>
                 </div>
