update partner logo and api document link

--- a/pricing.html
+++ b/pricing.html
@@ -32,14 +32,14 @@
       <!--:::::header area start:::::::-->
       <div class="header-area navbar" id="header">
          <div class="container-fluid">
-            <div class="col-lg-2 col-md-4  align-self-center">
+            <div class="col-lg-1 col-md-1 text-left">
                <div class="logo">
                   <a href="index.html" class="latterColor">
                   <!-- <img src="assets/img/Icon.png" alt=""> -->
                   miniCal</a>
                </div>
             </div>
-            <div class="col-lg-6 col-md-4  d-none d-lg-block">
+            <div class="col-lg-7 col-md-7  d-none d-lg-block">
                <div class="menu-wep">
                   <!--  <a href="http://marketplace.minical.io/"  target="_blank" class="headA" >Marketplace</a>  -->
                   <a href="https://forms.gle/WCuFvC7vjXBR8EAB7" class="headA">Become a partner</a>
@@ -48,10 +48,11 @@
                   <a href="http://marketplace.minical.io/" class="headA">Marketplace</a>
                   <a href="https://docs.minical.io" class="headA" target="_window">Documentation</a>
                   <a href="https://discord.gg/a7B7RXZ3w5" class="headA" target="_window">Chat with us</a>
+                  <a href="https://api-docs.minical.io/quick-start/get-started" class="headA" target="_window">API</a>
                   <!-- <a href="https://minical.kampsite.co/" class="headA">Feature Requests</a> -->
                </div>
             </div>
-            <div class="col-lg-4  col-md-4  d-none d-lg-block text-right btn-2">
+            <div class="col-lg-4 col-md-4 d-none d-md-block text-right btn-2">
                <a  class="btn" id="git-btn"> <iframe src="https://ghbtns.com/github-btn.html?user=minical&repo=minical&type=star&count=true&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe></a>
                <a href="http://app.minical.io/auth/register" target="_blank" class="btn-2"><span>Sign Up</span></a>
               <a href="http://app.minical.io/auth/login" target="_blank" class="btn-2"><span>Log In</span></a>
