Add new partner Helping Hotels

--- a/partners.html
+++ b/partners.html
@@ -162,6 +162,11 @@
                                 <h1 class="partners_img_name text-center">Sequoya</h1>
                                 </div>
                             </div>
+                            <div class="col-md-4 partners_div">
+                                <div  class="square-holder" style="padding: 0px;">
+                                    <img class="partners_img" src="./assets/img/helping-hotels.png">
+                                </div>
+                            </div>
                             
                         </div>
                         
