Change plan name

--- a/pricing.html
+++ b/pricing.html
@@ -84,7 +84,7 @@
             <a href="https://github.com/minical/minical"><button style="background-color: #c3d8ff;">Get Source Code</button></a>
          </div>
          <div class="plan">
-            <h2>Minimal</h2>
+            <h2>Mini-Cloud</h2>
             <div class="price">Free</div>
             <ul class="features">               
                <li><i class="fas fa-check-circle"></i> Hosted by miniCal</li>
