--- a/pricing.html
+++ b/pricing.html
@@ -47,6 +47,7 @@
                   <a href="http://marketplace.minical.io/" class="headA">Marketplace</a>
                   <a href="https://docs.minical.io" class="headA" target="_window">Documentation</a>
                   <a href="pricing.html" class="headA">Pricing</a>
+                  <a href="https://blog.minical.io" target="_window" class="headA">Blog</a>
                   <!-- <a href="https://discord.gg/a7B7RXZ3w5" class="headA" target="_window">Chat with us</a> -->
                   <!-- <a href="https://minical.kampsite.co/" class="headA">Feature Requests</a> -->
                </div>
